[package]
name = "oicq4r"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.24"
hyper = { version = "0.14.20", features = ["full"] }
hyper-tls = "0.5.0"
log = "0.4.17"
md5 = "0.7.0"
p256 = { version = "0.11.1", features = ["ecdh"] }
protobuf = "3.1.0"
rand = "0.8.5"
tokio = { version = "1.21.1", features = ["net", "macros"] }
