[package]
name = "oicq4r"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.0"
base64 = "0.13.0"
flate2 = "1.0.24"
hyper = { version = "0.14.20", features = ["full"] }
hyper-tls = "0.5.0"
log = "0.4.17"
log4rs = "1.1.1"
md5 = "0.7.0"
p256 = { version = "0.11.1", features = ["ecdh"] }
pin-project-lite = "0.2.9"
protobuf = "3.1.0"
rand = "0.8.5"
tokio = { version = "1.21.1", features = ["net", "macros", "rt-multi-thread"] }
